--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,7 @@ main{
     
 }
 .image-section{
-    width: 360px;
+    width: 340px;
     height: 250px;
     background-image: url("../images/image-product-mobile.jpg");
     background-position: center center;
@@ -57,7 +57,7 @@ main{
 }
 .info-section{
     padding: 20px;
-    width: 360px;
+    width: 340px;
     background: var(--white);
     border: 0 solid;
     border-radius: 0 0 15px 15px;
@@ -65,10 +65,15 @@ main{
 
 .info-section span{
     opacity: 0.7;
+    text-transform: uppercase;
+    letter-spacing: 5px;
 }
+
+
 
 .info-section h2{
     font-family: 'Fraunces', serif;
+    font-size: 36px;
     margin: 10px 0 10px;
 }
 
@@ -97,7 +102,7 @@ main{
 }
 
 .add-to-card{
-    width: 320px;
+    width: 300px;
     padding:15px;
     text-align: center;
     color: var(--white);
@@ -111,6 +116,11 @@ main{
     justify-content: center;
     flex-wrap: wrap;
     gap: 5px;
+    cursor: pointer;
+}
+
+.add-to-card:hover{
+    background: var(--dark-blue);
 }
 
 .add-to-card span{
@@ -129,5 +139,56 @@ main{
 
 
 
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+.attribution { 
+    font-size: 11px;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 30px;   /* Height of the footer */
+    background: var(--dark-cyan);
+    color: var(--white);
+    display: flex;
+    align-items: center;justify-content: center;
+}
+
+
+@media(min-width:900px) {
+    main{
+        position: relative;
+        margin-top:150px;
+        width: 90vw;
+        height: 50%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    .image-section{
+        width: 340px;
+        height: 500px;
+        background-image: url("../images/image-product-desktop.jpg");
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        border: 0 solid;
+        border-radius: 15px 0 0 15px;
+        
+    }
+    .info-section{
+        padding: 40px;
+        width: 340px;
+        height: 500px;
+        background: var(--white);
+        border: 0 solid;
+        border-radius: 0 15px 15px 0;
+    }
+
+    .info-section p{
+        margin: 30px 0 30px 0;
+    }
+    .add-to-card{
+        width: 260px;
+        margin-top: 30px;
+    }
+}
